# Betab-Launcher

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
data/: library.json  state.json
src/: main.cpp
src/data/: json.cpp  json.h  library.cpp  library.h  state.cpp  state.h
src/scenes/: home_screen.cpp  home_screen.h  index_screen.cpp  index_screen.h  livearea_screen.cpp  livearea_screen.h  notifications_screen.cpp  notifications_screen.h  overlays.cpp  overlays.h  scene.h  scene_stack.cpp  scene_stack.h
src/ui/: constants.h  layout.cpp  layout.h  renderer.cpp  renderer.h
